--- a/index.html
+++ b/index.html
@@ -31,13 +31,21 @@
                 <i>
                     <table align="center">
                         <tr>
-                            <td><a class="nav-item" href="#about">Sobre mi</a></td>
+                            <td><a class="nav-item" href="index.html">
+                                    <font size=5 color=gray>Sobre mi</font>
+                                </a></td>
                             <td width="60px"></td>
-                            <td><a class="nav-item" href="#projects">Proyectos</a></td>
+                            <td><a class="nav-item" href="projects.html">
+                                    <font size=5 color=gray>Proyectos</font>
+                                </a></td>
                             <td width="60px"></td>
-                            <td><a class="nav-item" href="#social">Redes Sociales</a></td>
+                            <td><a class="nav-item" href="social.html">
+                                    <font size=5 color=gray>Redes Sociales</font>
+                                </a></td>
                             <td width="60px"></td>
-                            <td> <a class="nav-item" href="#contacto">Contacto</a></td>
+                            <td> <a class="nav-item" href="contacto.html">
+                                    <font size=5 color=gray>Contacto</font>
+                                </a></td>
                         </tr>
                     </table>
 
@@ -50,59 +58,263 @@
     <hr>
     <br>
 
-    <!-- Proyectos -->
-    <section id="projects">
+    <h2>Sobre mi</h2>
+
+    <section id="perfil">
+
+        <br>
+
+        <table align="center">
 
 
-        <h2>Proyectos</h3>
-            <br>
 
-            <table align="center">
+            <tr>
+                <td><br></td>
+                <td><br></td>
+                <td>
+                    <marquee behavior="" scrolldelay="200" direction="up">
+                        <h3>Habilidades duras</h3>
+                    </marquee>
+                </td>
+                <td><br></td>
+                <td><br></td>
+            </tr>
+            <td><br><br><br><br></td>
+            <tr>
 
-                <tr>
-                    <td> <b>PaLlevar</b> </td>
-                    <td><b>AgroShop</b> </td>
-                </tr>
-                <tr>
-                    <td><br></td>
-                    <td><br></td>
-                </tr>
-                <tr>
-                    <td><img src="assets/img/project-1.jpg" alt="Image"></td>
-                    <td><img src="assets/img/project-1.jpg" alt="Image"></td>
-                </tr>
-                <tr>
-                    <td><br></td>
-                    <td><br></td>
-                </tr>
-                <tr>
-                    <td>Sistemas de venta y reparto de restaurantes</td>
-                    <td>Sistemas de venta y reparto de productos agricolas</td>
 
-                </tr>
+                <td><img src="assets/img/phone.png" alt="Image" width="150px" height="150px"></td>
+                <td></td>
+                <td> <img src="assets/img/location.png" alt="Image" width="150px" height="150px"></td>
 
-            </table>
+                <td></td>
+                <td><img src="assets/img/email.png" alt="Image" width="150px" height="150px"></td>
+            </tr>
+
+            <tr>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+            </tr>
+
+            <tr>
+                <td> <b>Spring</b> </td>
+                <td width="300px"></td>
+
+                <td> <b>Angular</b> </td>
+
+                <td width="300px"></td>
+                <td> <b>PostgreSQL</b></td>
+            </tr>
+            <tr>
+                <td><br><br><br></td>
+                <td><br><br><br></td>
+                <td><br><br><br></td>
+                <td><br><br><br></td>
+                <td><br><br><br></td>
+            </tr>
+            <tr>
+
+
+                <td><img src="assets/img/phone.png" alt="Image" width="150px" height="150px"></td>
+                <td></td>
+                <td> <img src="assets/img/location.png" alt="Image" width="150px" height="150px"></td>
+
+                <td></td>
+                <td><img src="assets/img/email.png" alt="Image" width="150px" height="150px"></td>
+            </tr>
+
+            <tr>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+            </tr>
+
+            <tr>
+                <td> <b>HTML5</b> </td>
+                <td width="300px"></td>
+
+                <td> <b>CSS</b> </td>
+
+                <td width="300px"></td>
+                <td> <b>TypeScript</b></td>
+            </tr>
+
+            <tr>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+            </tr>
+
+            <tr>
+                <td><br><br><br></td>
+                <td><br><br><br></td>
+                <td><br><br><br></td>
+                <td><br><br><br></td>
+                <td><br><br><br></td>
+            </tr>
+            <tr>
+
+
+                <td><img src="assets/img/phone.png" alt="Image" width="150px" height="150px"></td>
+                <td></td>
+                <td> <img src="assets/img/location.png" alt="Image" width="150px" height="150px"></td>
+
+                <td></td>
+                <td><img src="assets/img/email.png" alt="Image" width="150px" height="150px"></td>
+            </tr>
+
+            <tr>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+            </tr>
+
+            <tr>
+                <td> <b>Microsoft Word</b> </td>
+                <td width="300px"></td>
+
+                <td> <b>Microsoft Excel</b> </td>
+
+                <td width="300px"></td>
+                <td> <b>Microsoft PowerPoint</b></td>
+            </tr>
+
+            <tr>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+            </tr>
+
+        </table>
+
+
+
+        <br>
+
+        <table align="center">
+
+
+
+            <tr>
+                <td><br></td>
+                <td><br></td>
+                <td>
+                    <marquee behavior="" scrolldelay="200" direction="up">
+                        <h3>Habilidades blandas</h3>
+                    </marquee>
+                </td>
+                <td><br></td>
+                <td><br></td>
+            </tr>
+            <td><br><br><br><br></td>
+            <tr>
+
+
+                <td><img src="assets/img/phone.png" alt="Image" width="150px" height="150px"></td>
+                <td></td>
+                <td> <img src="assets/img/location.png" alt="Image" width="150px" height="150px"></td>
+
+                <td></td>
+                <td><img src="assets/img/email.png" alt="Image" width="150px" height="150px"></td>
+            </tr>
+
+            <tr>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+            </tr>
+
+            <tr>
+                <td> <b>Profesionalidad</b> </td>
+                <td width="300px"></td>
+
+                <td> <b>Responsabilidad</b> </td>
+
+                <td width="300px"></td>
+                <td> <b>Trabajo en equipo</b></td>
+            </tr>
+
+            <tr>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+            </tr>
+
+        </table>
     </section>
 
     <br>
     <hr>
     <br>
 
-    <!-- Social -->
-    <section id="social">
 
-        <h2>Redes Sociales</h3>
-            <br>
+    <section id="hobbies">
+        <marquee behavior="" direction="">
+            <h3>Hobbies</h3>
+        </marquee>
 
-            <a target="_blank" href="https://www.facebook.com/osti.katriel/">
-                <img src="assets/img/facebook.png" width="250px" height="250px"></a>
+        <br>
 
-            <a target="_blank" href="https://www.linkedin.com/in/osti-katriel-barrozo-figueroa-00b393208/">
-                <img src="assets/img/linkedin.png" width="250px" height="250px"></a>
+        <table align="center">
+            <tr>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+            </tr>
 
-            <a target="_blank" href="https://github.com/katriel18">
-                <img src="assets/img/github.png" width="250px" height="250px"></a>
+            <tr>
+                <td><img src="assets/img/f1.png" alt="Image" width="200px" height="150px"></td>
+                <td></td>
+                <td> <img src="assets/img/r1.png" alt="Image" width="200px" height="150px"></td>
 
+                <td></td>
+                <td><img src="assets/img/p2.png" alt="Image" width="300px" height="150px"></td>
+            </tr>
+            <tr>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+            </tr>
+            <tr>
+                <td> <b>Futbol</b> </td>
+                <td width="300px"></td>
+
+                <td> <b>Correr</b> </td>
+
+                <td width="300px"></td>
+                <td> <b>Programar</b></td>
+            </tr>
+
+
+
+            <tr>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+            </tr>
+
+        </table>
     </section>
 
     <br>
@@ -110,79 +322,21 @@
     <br>
 
     <!-- Footer -->
-    <section id="contacto">
+    <section id="footer">
 
-        <h2>Contacto</h3>
-            <br>
-
-            <table align="center">
-
-                <tr>
-                    <td> <b>Telefono</b> </td>
-                    <td width="300px"></td>
-
-                    <td> <b>Direccion</b> </td>
-
-                    <td width="300px"></td>
-                    <td> <b>Correo</b></td>
-                </tr>
-
-                <tr>
-                    <td><br></td>
-                    <td><br></td>
-                    <td><br></td>
-                    <td><br></td>
-                    <td><br></td>
-                </tr>
-
-                <tr>
-
-
-                    <td><img src="assets/img/phone.png" alt="Image" width="150px" height="150px"></td>
-                    <td></td>
-                    <td> <img src="assets/img/location.png" alt="Image" width="150px" height="150px"></td>
-
-                    <td></td>
-                    <td><img src="assets/img/email.png" alt="Image" width="150px" height="150px"></td>
-                </tr>
-
-                <tr>
-                    <td><br></td>
-                    <td><br></td>
-                    <td><br></td>
-                    <td><br></td>
-                    <td><br></td>
-                </tr>
-
-                <tr>
-
-                    <td>93493759343</td>
-                    <td></td>
-                    <td> Ciudad Universitaria de la Universidad de San Marcos, Lima, Perú</td>
-
-                    <td></td>
-                    <td>osti.katriel@gmail.com</td>
-                </tr>
-
-
-                <tr>
-                    <td><br><br></td>
-                    <td><br><br></td>
-                    <td><br><br></td>
-                    <td><br><br></td>
-                    <td><br><br></td>
-                </tr>
+        <table align="center">
 
 
 
-                <tr>
-                    <td colspan="5"><b> @OstiKatriel</b></td>
-                </tr>
+            <tr>
+                <td colspan="5"><b>Copyright @2021 | Todos los derechos reservados | Osti Katriel</b></td>
+            </tr>
 
-            </table>
+        </table>
     </section>
 
     <br>
+
 
 </body>
 
