--- a/contacto.html
+++ b/contacto.html
@@ -31,13 +31,21 @@
                 <i>
                     <table align="center">
                         <tr>
-                            <td><a class="nav-item" href="index.html"><font size=5 color=gray>Sobre mi</font></a></td>
+                            <td><a class="nav-item" href="index.html">
+                                    <font size=5 color=gray>Sobre mi</font>
+                                </a></td>
                             <td width="60px"></td>
-                            <td><a class="nav-item" href="projects.html"><font size=5 color=gray>Proyectos</font></a></td>
+                            <td><a class="nav-item" href="projects.html">
+                                    <font size=5 color=gray>Proyectos</font>
+                                </a></td>
                             <td width="60px"></td>
-                            <td><a class="nav-item" href="social.html"><font size=5 color=gray>Redes Sociales</font></a></td>
+                            <td><a class="nav-item" href="social.html">
+                                    <font size=5 color=gray>Redes Sociales</font>
+                                </a></td>
                             <td width="60px"></td>
-                            <td> <a class="nav-item" href="contacto.html"><font size=5 color=gray>Contacto</font></a></td>
+                            <td> <a class="nav-item" href="contacto.html">
+                                    <font size=5 color=gray>Contacto</font>
+                                </a></td>
                         </tr>
                     </table>
 
@@ -54,67 +62,124 @@
     <section id="contacto">
 
         <h2>Contacto</h2>
-            <br>
+        <br>
+        <hr>
+        <br><br><br>
 
-            <table align="center">
+        <table align="center">
+            <tr>
+                <td colspan="6">
+                    <font size=5 color=gray>Formulario de contacto</font>
+                </td>
+            </tr>
+            <tr>
+                <td><br><br></td>
+            </tr>
+            <tr>
+                <td colspan="3">Nombre</td>
+                <td colspan="3">Correo</td>
+            </tr>
 
+            <tr>
+                <td colspan="3">
+                    <input type="text">
+                </td>
 
+                <td colspan="3">
+                    <input type="text">
+                </td>
 
-                <tr>
-                    <td><br></td>
-                    <td><br></td>
-                    <td><br></td>
-                    <td><br></td>
-                    <td><br></td>
-                </tr>
+            </tr>
+            <tr>
+                <td><br><br></td>
+            </tr>
+            <tr>
+                <td colspan="6">Mensaje</td>
+            </tr>
+            <tr>
 
-                <tr>
+                <td colspan="6"><textarea name="" id="" cols="55" rows="10"></textarea></td>
 
-
-                    <td><img src="assets/img/phone.png" alt="Image" width="150px" height="150px"></td>
-                    <td></td>
-                    <td> <img src="assets/img/location.png" alt="Image" width="150px" height="150px"></td>
-
-                    <td></td>
-                    <td><img src="assets/img/email.png" alt="Image" width="150px" height="150px"></td>
-                </tr>
-
-                <tr>
-                    <td><br></td>
-                    <td><br></td>
-                    <td><br></td>
-                    <td><br></td>
-                    <td><br></td>
-                </tr>
-                <tr>
-                    <td> <b>Telefono</b> </td>
-                    <td width="300px"></td>
-
-                    <td> <b>Direccion</b> </td>
-
-                    <td width="300px"></td>
-                    <td> <b>Correo</b></td>
-                </tr>
-                <tr>
-
-                    <td>93493759343</td>
-                    <td></td>
-                    <td> Ciudad Universitaria de la Universidad de San Marcos, Lima, Perú</td>
-
-                    <td></td>
-                    <td>osti.katriel@gmail.com</td>
-                </tr>
+            </tr>
+            <tr>
+                <td><br><br></td>
+            </tr>
+            <tr>
+                <td colspan="6"><button>Enviar</button></td>
+            </tr>
+        </table>
 
 
-                <tr>
-                    <td><br><br></td>
-                    <td><br><br></td>
-                    <td><br><br></td>
-                    <td><br><br></td>
-                    <td><br><br></td>
-                </tr>
+        <br><br><br>
+        <hr>
+        <br><br><br>
 
-            </table>
+        <table align="center">
+
+            <tr>
+                <td colspan="6">
+                    <font size=5 color=gray>Contacteme</font>
+                </td>
+            </tr>
+            <tr>
+                <td><br><br></td>
+            </tr>
+
+            <tr>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+            </tr>
+
+            <tr>
+
+
+                <td><img src="assets/img/phone.png" alt="Image" width="150px" height="150px"></td>
+                <td></td>
+                <td> <img src="assets/img/location.png" alt="Image" width="150px" height="150px"></td>
+
+                <td></td>
+                <td><img src="assets/img/email.png" alt="Image" width="150px" height="150px"></td>
+            </tr>
+
+            <tr>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+                <td><br></td>
+            </tr>
+            <tr>
+                <td> <b>Telefono</b> </td>
+                <td width="300px"></td>
+
+                <td> <b>Direccion</b> </td>
+
+                <td width="300px"></td>
+                <td> <b>Correo</b></td>
+            </tr>
+            <tr>
+
+                <td>93493759343</td>
+                <td></td>
+                <td> Ciudad Universitaria de la Universidad de San Marcos, Lima, Perú</td>
+
+                <td></td>
+                <td>osti.katriel@gmail.com</td>
+            </tr>
+
+
+            <tr>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+                <td><br><br></td>
+            </tr>
+
+        </table>
     </section>
 
     <br>
