--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,9 @@
 
 
         <h2>Proyectos</h2>
-            <br>
+        <br>
+        <hr>
+        <br>
 
             <table align="center">
 
@@ -84,9 +86,32 @@
 
                 </tr>
 
+
+
+                <tr>
+
+                    <td >  <br><br><hr><br><br></td>
+                    <td >  <br><br><hr><br><br></td>
+                </tr>
+              
+              
+                <tr>
+                    <td><h2> <i>Demo</i> </h2></td>
+                    <td><h2> <i>Demo</i> </h2></td>
+
+                </tr>
+
+                <tr>
+                    <td>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/zHs1TFzlr84" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </td>
+                    <td><iframe width="560" height="315" src="https://www.youtube.com/embed/w_Vlnp--Mxk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+
+                </tr>
+
             </table>
     </section>
-
+    <br><br><br>
     <br>
     <hr>
     <br>
